Flow works: stores users and google places